# shiin_test

./: .gitignore  1.csv  1.po  README.md  ja.csv  zh.csv
app/: CMakeLists.txt
app/resources/: shiin.rc
app/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
app/src/core/: ErrorCode.h  FileMeta.cpp  FileMeta.h  PatchInfo.h  PatchMain.cpp  PatchMain.h
app/src/ui/: ErrorMessage.h  ShiinButton.cpp  ShiinButton.h  TitleScreenBackground.cpp  TitleScreenBackground.h
game_resource/: README.md
resource/: char_mapping.txt  char_table.txt  default_char_table.txt  shiin.py
script/: common_util.py  config.py  copy_gen.py  csv_util.py  dds_converter.py  debug.py  example.py  exg_importer.py  extract.py  font_util.py  gamefile_util.py  main.py  misc.py  packer.py  patch_info.txt  patch_util.py  shiin.py  text_formatter.py
script/game_resource/: README.md
script/resource/: char_mapping.txt  char_table.txt  default_char_table.txt
src/: main.py
src/app/: ErrorMessage.h  PatchMain.cpp  mainwindow.h  mainwindow.ui
src/app/resources/: .shiin.rc.swo  shiin.rc
src/app/shiin/: CMakeLists.txt  FileMeta.cpp  FileMeta.h  btn_images.qrc  main.cpp  mainwindow.cpp
src/script/: common_util.py  csv_util.py  font_util.py  gamefile_util.py  misc.py  patch_util.py  shiin.py
text/: battle-comb_cn.csv  battle_cn.csv  boss_cn.csv  chapter1-extra_cn.csv  chapter1_cn.csv  chapter1_extra.csv  chapter2_cn.csv  chapter3_cn.csv  chapter4_cn.csv  chapter5_cn.csv  chapter6_cn.csv  char_cn.csv  exe_cn.csv  gallery_cn.csv  item_cn.csv  loc_cn.csv  map_cn.csv  maze_cn.csv
